--- a/jogodavelha.css
+++ b/jogodavelha.css
@@ -1,21 +1,30 @@
+/* jogodavelha.css */
+body {
+  font-family: Arial, sans-serif;
+  text-align: center;
+}
+
 #board {
-  border: thin solid red;
-  width: 420px;
-  height: 420px;
-  overflow: hidden;
+  display: grid;
+  grid-template-columns: repeat(3, 100px);
+  gap: 5px;
+  justify-content: center;
+  margin-top: 20px;
 }
 
 .casinha {
-  width: 135px;
-  height: 135px;
-  border: thin solid;
-  float: left;
-  text-align:center;
-  line-height: 135px;
-  font-size:80px;
+  width: 100px;
+  height: 100px;
+  background-color: white;
+  border: 1px solid black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 24px;
+  cursor: pointer;
 }
 
-.gray {
-  background: rgb(5, 149, 246);
-  color: #ffffff;
+.casinha.gray {
+  background-color: blue;
 }
+
